# todo-app

./: .gitignore  GEMINI.md  README.md  conftest.py  pyproject.toml  railway.json  requirements.txt
.specify/memory/: constitution.md
backend/: .env.example  =2.0.0  DATABASE.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  TESTING_SUMMARY.md  TEST_GUIDE.md  db_setup_verification.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  verify_db.py  verify_timezone_fix.py
backend/app/: __init__.py  auth.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  auth.py  system.py  tasks.py  users.py
backend/app/services/: task_service.py
backend/app/utils/: datetime_utils.py  security.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_datetime_utils.py  test_services.py  test_utils.py
frontend/: .env.local.example  CLAUDE.md  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthGuard.tsx  DeveloperSection.tsx  DueDateIndicator.tsx  FilterControls.tsx  Footer.tsx  Header.tsx  Navbar.tsx  PriorityBadge.tsx  SearchBar.tsx  SortControls.tsx  TagList.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/hooks/: useTaskMutations.ts  useTasks.ts
frontend/lib/: api.ts  auth.ts  countries.ts  types.ts
scripts/: integration_smoke.ps1  integration_smoke.sh
specs/01-in-memory-todo/: plan.md  spec.md  tasks.md
specs/02-fullstack-web-todo/: plan.md  (+5 more)
src/: main.py  models.py  services.py
(+22 files in other folders)
