[project]
name = "todo-app"
version = "2.0.0"
description = "Full-Stack Todo Web App with Authentication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = [".", "backend"]
